<?xml version="1.0"?>
<package format="2">
  <name>biped_heightmap_msgs</name>
  <version>0.0.0</version>
  <description>The biped_heightmap_msgs package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
